# Web-Service-and-Data-CW1

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 136b09469b18_initial_tables.py  2bfe0c4fe9c6_add_user_profile_fields.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: jwt.py
backend/app/data/: import_usda.py
backend/app/models/: __init__.py  food.py  meal.py  meal_item.py  user.py
backend/app/routers/: analytics.py  auth.py  foods.py  meals.py  users.py
backend/app/schemas/: analytics.py  food.py  meal.py  user.py
backend/tests/: conftest.py  test_api.py
docs/: api-documentation.md  presentation.md  presentation.pptx  technical-report.md  test-results.txt
docs/agent-docs/: plan.md
docs/genai-logs/: conversation-2026-04-07.txt  conversation-2026-04-15.md
mcp_server/: config.py  server.py
